# robot-follower-yolov8

./: .gitignore  LICENSE  README.md  README_JP.md  Robot_follower.py  pyproject.toml  requirements-minimal.txt  requirements.txt
